--- a/style.css
+++ b/style.css
@@ -163,6 +163,12 @@ h1 > span {
   right: -5vw;
 }
 
+.wrap {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 header {
   background-color: white;
   width: 100%;
@@ -177,13 +183,10 @@ header {
   transform: translate(0, -50px);
 }
 
-.wrap {
+.header-wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
   padding: 0 40px;
 }
 
@@ -261,7 +264,7 @@ header {
   margin-bottom: 20px;
 }
 
-.service .sub {
+.sub {
   color: #0000008a;
 }
 
@@ -303,4 +306,44 @@ header {
   display: block;
   text-align: right;
   font-weight: bold;
+}
+
+.vision {
+  background-image: url("./image/bg01.jpeg");
+  object-fit: cover;
+  height: 650px;
+  padding: 100px 0;
+}
+
+.vision h2 {
+  text-align: center;
+  font-size: 42px;
+  margin: 54px 0;
+  transition-delay: 0.5s;
+}
+
+.vision ul {
+  display: flex;
+  justify-content: center;
+}
+
+.vision ul li {
+  padding: 0 30px;
+  border-right: 1px solid gainsboro;
+}
+
+.vision ul li:last-child {
+  border-right: none;
+}
+
+.vision .catch {
+  font-size: 2rem;
+  color: #2da690;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.vision .sub {
+  text-align: center;
 }
