--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ strong.more {
 }
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 body {
@@ -167,6 +168,7 @@ h1 > span {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 40px;
 }
 
 header {
@@ -346,4 +348,41 @@ header {
 
 .vision .sub {
   text-align: center;
+}
+
+.news {
+  padding: 120px;
+}
+
+.news li {
+  display: flex;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.news li > img {
+  width: 150px;
+  height: 80px;
+  object-fit: cover;
+}
+
+.news-meta time {
+  font-size: 0.8em;
+  margin: 0 20px;
+  color: gainsboro;
+}
+
+.news-meta a {
+  font-size: 0.8em;
+  font-weight: 700;
+  margin-right: 10px;
+}
+
+.news-title {
+  margin: 10px 10px 10px 20px;
+  color: #0000008a;
+}
+
+.news-content:hover .news-title > a {
+  color: #2da690;
 }
